[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvistra"
version = "0.1.2"
description = "Image analysis and ROI management tool"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "natsort",
    "vispy",
    "qtpy",
    "PyQt6",
    "tifffile",
    "h5py",
    "superqt",
    "magicgui",
    "matplotlib",
    "zarr>=3.0",
    "scipy",
    "nd2",
]

[project.scripts]
pyvistra = "pyvistra.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyvistra*"]
